# ChangeLog for dev-perl/IPC-ShareLite
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-ShareLite/ChangeLog,v 1.6 2003/06/08 13:42:50 mcummings Exp $

*IPC-ShareLite-0.09 (08 Jun 2003)

  08 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  IPC-ShareLite-0.09.ebuild:
  CPAN version bump

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*IPC-ShareLite-0.08 (13 Nov 2002)

  18 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org>
  IPC-ShareLite-0.08.ebuild, ChangeLog :

  Force non-interactive compilation. Resolves bug #10977

  13 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org>
  IPC-ShareLite-0.08.ebuild, ChangeLog,
  files/digest-IPC-ShareLite-0.08 :

  Initial import. Required dep by updated version of HTML::Mason.