@@ -1,6 +1,6 @@
-MD5 ad703c09df1bc8719a566d7d88923009 ChangeLog 834
 MD5 9e3794e07f30aa15dccae230bdc3ff09 IPC-ShareLite-0.08.ebuild 682
-MD5 8a67a3bf867ce9b8369279f51577a719 IPC-ShareLite-0.09.ebuild 685
+MD5 c3a505ff0afc0d40eb4f5ff6198f58dc ChangeLog 916
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
+MD5 e39094f60956bb7243e9258d0b84b213 IPC-ShareLite-0.09.ebuild 684
 MD5 84eeca614c892009f2639e044741ae36 files/digest-IPC-ShareLite-0.08 69
 MD5 0ce98d6be329415eabf9a27cff530c7a files/digest-IPC-ShareLite-0.09 69
