@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IPC-ShareLite
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-ShareLite/ChangeLog,v 1.6 2003/06/08 13:42:50 mcummings Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-ShareLite/ChangeLog,v 1.7 2004/01/20 17:29:59 gustavoz Exp $
+
+  20 Jan 2004; <gustavoz@gentoo.org> IPC-ShareLite-0.09.ebuild:
+  stable on sparc
 
 *IPC-ShareLite-0.09 (08 Jun 2003)
 
